--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,11 @@ plugins {
 
 dependencies {
     implementation 'commons-lang:commons-lang:2.6'
+    implementation 'org.testcontainers:testcontainers:1.17.6'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.testcontainers:postgresql:1.17.6'
+
+
 }
 
 jar {
