--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,16 +1,16 @@
-name: Greetings
-
-on: [pull_request_target, issues]
+name: Greeting from Lamp
+on: [push, pull_request_target, issues]
 
 jobs:
-  greeting:
+  my-job:
+    name: My Job
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: "Message that will be displayed on users' first issue"
-        pr-message: "Message that will be displayed on users' first pull request"
+    - name: Print a greeting
+      env:
+        MY_VAR: Hi there! My name is
+        FIRST_NAME: Lamp
+        MIDDLE_NAME: The
+        LAST_NAME: Duan
+      run: |
+        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
